--- a/app/src/main/res/layout/item_actor.xml
+++ b/app/src/main/res/layout/item_actor.xml
@@ -6,12 +6,13 @@
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
     android:layout_gravity="center_horizontal"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#424242">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="172dp"
         android:scaleType="centerCrop"
         tools:src="@tools:sample/backgrounds/scenic"/>
 
@@ -23,7 +24,7 @@
         android:ellipsize="end"
         android:layout_gravity="center"
         android:textSize="18sp"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textStyle="bold"
         tools:text="Harry Potter"/>
 
@@ -33,6 +34,7 @@
         android:layout_height="wrap_content"
         android:maxLines="1"
         android:ellipsize="end"
+        android:textColor="#DCDCDC"
         android:layout_gravity="center"
         android:textSize="18sp"
         tools:text="Bred Pit"/>
