--- a/app/src/main/res/layout/item_director.xml
+++ b/app/src/main/res/layout/item_director.xml
@@ -8,10 +8,10 @@
     android:layout_gravity="center_horizontal"
     android:layout_height="wrap_content">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="172dp"
         android:scaleType="centerCrop"
         tools:src="@tools:sample/backgrounds/scenic"/>
 
@@ -19,10 +19,10 @@
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:ellipsize="end"
         android:layout_gravity="center"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
+        android:textStyle="bold"
         tools:text="Bred Pit"/>
 
 </LinearLayout>
